--- a/css/mindmap-style.css
+++ b/css/mindmap-style.css
@@ -1,5 +1,7 @@
 html, body {
-  font-family: sans-serif;
+  font-family: "Comic Neue", cursive;
+  font-weight: 300;
+  font-style: normal;
   margin: 0;
   padding: 0;
   height: 100%;
