--- a/css/course-add.css
+++ b/css/course-add.css
@@ -115,8 +115,8 @@ body {
   margin-top: 20px;
 }
 
-.pink-btn button{
-    padding: top 4%;
+.pink-btn{
+    padding-top:4%;
     padding-left:10%;
     display:flex;
     background: #ff6f91;
@@ -127,4 +127,8 @@ body {
     cursor: pointer;
     font-size: 0.8rem;
     transition: all 0.2s ease;
+}
+.pink-btn:hover {
+  transform: scale(1.05);
+  background: #ff4081;
 }
