--- a/css/todo-style.css
+++ b/css/todo-style.css
@@ -67,7 +67,7 @@ body {
   font-size: 1.1rem;
   border: none;
   outline: none;
-  border-radius: 22px;
+  border-radius: 10px;
   box-shadow: 0 0 10px rgba(255, 194, 209, 0.3);
   color: #333;
 }
@@ -160,3 +160,11 @@ body {
 .delete-btn:hover {
     background: #ff4c70;
 }
+
+.empty-state {
+            text-align: center;
+            padding: 40px 20px;
+            color: #200215;
+            font-weight: bold;
+            font-size: 20px;
+        }
