--- a/css/course-add.css
+++ b/css/course-add.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -115,10 +115,10 @@ body {
   margin-top: 20px;
 }
 
-.pink-btn{
-    padding-top:4%;
-    padding-left:10%;
-    display:flex;
+.pink-btn {
+  position:fixed;
+  bottom:40px;
+  right:40px;
     background: #ff6f91;
     color: white;
     border: none;
@@ -127,8 +127,93 @@ body {
     cursor: pointer;
     font-size: 0.8rem;
     transition: all 0.2s ease;
+    box-shadow:0 4px 10px rgba(0,0,0,0.2);
 }
+
 .pink-btn:hover {
+    background: #ff4c70;
+}
+.course-add-container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content:flex-start;
+  position:absolute;
+  top:100px;
+  left:50px;
+  font-family: "Comic Neue", cursive;
+  color: white;
+}
+#subject-box-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.subject-single{
+  position:relative;
+  width: 200px;
+  height: 200px;
+  background-color: #ff6f91;
+  display: flex;
+  flex-direction:column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+  transition: transform 0.2s ease, background 0.2s ease;
+  cursor: pointer;
+  padding:10px;
+  text-align:left;
+}
+.subject-single small{
+  color:#fff;
+  opacity:0.8;
+  font-size:0.9rem;
+  display:block;
+}
+.subject-single strong{
+  font-size:1.2rem;
+  display:block;
+  margin-bottom:5px;
+}
+
+.subject-single:hover {
   transform: scale(1.05);
-  background: #ff4081;
+  background: #ee9db0;
+}
+.delete-btn {
+  position:absolute;
+  bottom:10px;
+  right:10px;
+    background: #f35277;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 0.8rem;
+    transition: all 0.2s ease;
+}
+
+.delete-btn:hover {
+    background: #ff4c70;
+}
+.notes-btn{
+  position:absolute;
+  bottom:40px;
+  right:10px;
+    background: #f35277;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 0.8rem;
+    transition: all 0.2s ease;
+}
+.notes-btn:hover {
+    background: #ff4c70;
 }
