--- a/css/course-add.css
+++ b/css/course-add.css
@@ -1,26 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Comic Neue", cursive;
-  font-weight: 300;
-  font-style: normal;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: linear-gradient(
-    0deg,
-    rgb(142, 45, 121) 0%,
-    rgb(219, 95, 178) 50%,
-    rgb(246, 165, 165) 100%
-  );
-}
+@import url('./shared-base.css');
 
 .navbar {
   position: fixed;
@@ -156,17 +134,19 @@ body {
   position:relative;
   width: 200px;
   height: 200px;
-  background-color: #ff6f91;
   display: flex;
   flex-direction:column;
   align-items: flex-start;
   justify-content: flex-start;
-  border-radius: 15px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
   transition: transform 0.2s ease, background 0.2s ease;
   cursor: pointer;
   padding:10px;
   text-align:left;
+  color: rgb(53, 4, 55);
+  border-radius: 20px;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.5);
+  border: 3px solid rgba(255, 255, 255, 0.18);
+  backdrop-filter: blur(10px);
 }
 .subject-single small{
   color:#fff;
@@ -205,7 +185,7 @@ body {
   position:absolute;
   bottom:40px;
   right:10px;
-    background: #f35277;
+    background: #ff4c70;
     color: white;
     border: none;
     padding: 5px 10px;
@@ -215,5 +195,5 @@ body {
     transition: all 0.2s ease;
 }
 .notes-btn:hover {
-    background: #ff4c70;
+    background: #ff4c77;
 }
