--- a/css/notesnav.css
+++ b/css/notesnav.css
@@ -1,20 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('./commonStuff.css');
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 body {
-  font-family: "Comic Neue", cursive;
-  font-weight: 300;
-  font-style: normal;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
   background: #fdeafc no-repeat center center fixed;
 }
+
 .notes-container {
   display: flex;
   justify-content: center;
@@ -43,45 +32,6 @@ body {
 
 .notes-app h1 {
   font-size: 2rem;
-}
-
-/* Text input area */
-.input-box {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-
-.input-box input {
-  flex: 1;
-  padding: 10px 17px;
-  font-size: 1.1rem;
-  border: none;
-  outline: none;
-  border-radius: 22px;
-  box-shadow: 0 0 10px rgba(255, 194, 209, 0.3);
-  color: #333;
-}
-
-.input-box input::placeholder {
-  color: #bcbcbc;
-}
-
-.input-box button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 10px;
-  padding: 8px;
-  border-radius: 50%;
-  color: #fff;
-  font-size: 1.1rem;
-  background: rgba(225, 194, 209, 0.6);
-  border: 2px solid rgba(255, 255, 255, 0.18);
-  cursor: pointer;
-  transition: all 0.2s ease;
 }
 
 .input-box button:hover {
@@ -124,32 +74,4 @@ body {
 .note {
   width: 200px;
   opacity: 0.6;
-}
-
-.footer {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  margin-top: 20px;
-  font-size: 0.9rem;
-}
-
-.toggle-complete {
-    margin-right: 10px;
-    cursor: pointer;
-}
-
-.delete-btn {
-    background: #ff6f91;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 0.8rem;
-    transition: all 0.2s ease;
-}
-
-.delete-btn:hover {
-    background: #ff4c70;
 }
