--- a/css/commonStuff.css
+++ b/css/commonStuff.css
@@ -16,9 +16,9 @@ body {
   min-height: 100vh;
   background: linear-gradient(
     0deg,
-    rgb(142, 45, 121) 0%,
-    rgb(219, 95, 178) 50%,
-    rgb(246, 165, 165) 100%
+    #D7487C 0%,
+    #E485A8 50%,
+    #EBA3BD 100%
   );
 }
 
@@ -38,20 +38,20 @@ body {
 /* Buttons */
 .pink-btn,
 .delete-btn {
-  background: #ff6f91;
+  background: #c83b6f;
   color: white;
   border: none;
-  padding: 6px 12px;
-  border-radius: 8px;
+  padding: 13px 15px;
+  border-radius: 15px;
   cursor: pointer;
-  font-size: 0.9rem;
+  font-size: 1.15rem;
   transition: all 0.2s ease;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.855);
 }
 
 .pink-btn:hover,
 .delete-btn:hover {
-  background: #ff4c70;
+  background: #AF2758;
   transform: scale(1.05);
 }
 
