--- a/css/course.css
+++ b/css/course.css
@@ -1,4 +1,5 @@
-@import url('./shared-base.css');
+
+@import url('./commonStuff.css');
 
 .subject-app {
   width: 100%;
@@ -34,7 +35,7 @@
   font-size: 1.1rem;
   border: none;
   outline: none;
-  border-radius: 22px;
+  border-radius: 15px;
   box-shadow: 0 0 10px rgba(255, 194, 209, 0.3);
   color: #333;
 }
