--- a/css/mindmap-style.css
+++ b/css/mindmap-style.css
@@ -1,13 +1,15 @@
 html, body {
   font-family: "Comic Neue", cursive;
+  font-weight: 300;
+  font-style: normal;
   margin: 0;
   padding: 0;
   height: 100%;
   background: linear-gradient(
     0deg,
-    rgba(102, 38, 88, 1) 0%,
-    rgba(217, 91, 175, 1) 50%,
-    rgba(240, 156, 156, 1) 100%
+      #D7487C 0%,
+      #E485A8 50%,
+      #EBA3BD 100%
   );
 }
 
@@ -26,26 +28,30 @@ h1 {
   cursor: grab;
   user-select: none;
 }
-
-.Button, .Mutton {
+.Button {
   position: absolute;
+  top: -12px;
+  right: -12px;
   width: 30px;
   height: 30px;
   background: purple;
   color: white;
-  border: none;
-  border-radius: 50%;
+  border: 0;
+  border-radius: 50px;
   cursor: pointer;
 }
 
-.Button {
-  top: -12px;
-  right: -12px;
-}
-
 .Mutton {
+  position: absolute;
   top: -12px;
   right: -42px;
+  width: 30px;
+  height: 30px;
+  background: purple;
+  color: white;
+  border: 0;
+  border-radius: 50px;
+  cursor: pointer;
 }
 
 svg {
@@ -60,4 +66,57 @@ svg {
 line {
   stroke: #333;
   stroke-width: 2;
+}
+.delete-btn {
+  position:fixed;
+  bottom:70px;
+  right:40px;
+    background: #ff6f91;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 0.8rem;
+    transition: all 0.2s ease;
+}
+
+.delete-btn:hover {
+    background: #ff4c70;
+}
+.pink-btn {
+  position:fixed;
+  bottom:30px;
+  right:40px;
+    background: #ff6f91;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 0.8rem;
+    transition: all 0.2s ease;
+    box-shadow:0 4px 10px rgba(0,0,0,0.2);
+}
+
+.pink-btn:hover {
+    background: #ff4c70;
+}
+.save-btn {
+  position:fixed;
+  bottom:100px;
+  right:40px;
+    background: #ff6f91;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 0.8rem;
+    transition: all 0.2s ease;
+    box-shadow:0 4px 10px rgba(0,0,0,0.2);
+}
+
+.save-btn:hover {
+    background: #ff4c70;
 }
