--- a/css/mindmap-nav-style.css
+++ b/css/mindmap-nav-style.css
@@ -1,10 +1,10 @@
-@import url('./commonStuff.css');
+
 .navbar {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 70px;
+  height: 45px;
   background:#DD6692;
   display: flex;
   justify-content: center;
@@ -99,12 +99,13 @@
   background: #E485A8;
   color: white;
   border: none;
-  padding: 10px 30px;
+  padding: 10px 15px;
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.2s ease;
   min-width: 100px;
   font-size: 1.5rem;
+  max-height: fit-content;
 }
 
 .navbar > button:hover {
