--- a/css/notes-style.css
+++ b/css/notes-style.css
@@ -1,4 +1,4 @@
-@import url('./shared-base.css');
+@import url('./commonStuff.css');
 
 .notes-container {
   display: flex;
@@ -29,11 +29,6 @@
   font-size: 2rem;
 }
 
-.input-box button:hover {
-  transform: scale(1.1);
-  background: #ecb8cf;
-}
-
 .individual-notes-container {
   display: flex;
   align-items: center;
@@ -54,7 +49,7 @@
 }
 
 #notes-list li {
-  background: rgba(211, 164, 164, 0.8);
+  background: rgba(255, 255, 255, 0.4);
   margin-bottom: 10px;
   padding: 10px 15px;
   border-radius: 12px;
