--- a/css/notes-style.css
+++ b/css/notes-style.css
@@ -169,3 +169,19 @@
   padding-left: 20px;
   font-size: 0.9rem;
 }
+
+.notes-choice{
+  font-size: 0.9rem;
+  position: fixed;
+  bottom: 10px;
+  left: 10%;
+  width: 80%;
+  min-height: 45px;
+  max-height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  gap: 20px;
+  padding: 15px;
+
+}
